--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .Rhistory
 .RData
 .Ruserdata
+Richard McElreath - Statistical Rethinking_ A Bayesian Course with Examples in R and STAN (draft) (2020).pdf
+
